--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-helmet": "^6.1.0",
     "react-id-swiper": "^4.0.0",
     "react-player": "^2.9.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
     "swiper": "^8.0.6"
   },
