--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/hooks": "^3.6.13",
     "3d-react-carousal": "^4.0.2",
     "contentful": "^9.1.10",
+    "depcheck": "^1.4.3",
     "gatsby": "^4.6.2",
     "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-netlify": "^4.1.0",
