Added mobile media queries, WIP getting <CardStack> to render

--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   },
   "dependencies": {
     "@loadable/component": "^5.15.2",
-    "@mantine/hooks": "^3.6.13",
     "3d-react-carousal": "^4.0.2",
-    "contentful": "^9.1.10",
     "depcheck": "^1.4.3",
     "gatsby": "^4.6.2",
     "gatsby-plugin-image": "^2.7.0",
@@ -34,11 +32,11 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "react-id-swiper": "^4.0.0",
     "react-player": "^2.9.0",
     "react-slick": "^0.28.1",
     "react-slick-carousel": "^0.14.9",
     "react-slideshow-image": "^3.7.0",
+    "react-spring-3d-carousel-2": "^1.0.1",
     "start": "^5.1.0",
     "swiper": "^8.0.6"
   },
